# xtv_to_osv

./: .gitignore  README.md  app.py  pyproject.toml  requirements-build.txt
.github/workflows/: build.yml
packaging/: pysidedeploy.spec
scripts/: build.py  package_artifact.py  sign_macos.sh  sign_windows.ps1
src/xtra_to_osmo/: __init__.py  batch.py  cli.py  converter.py  gui.py
tests/: test_batch.py  test_build.py  test_converter.py  test_gui.py
