[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "xtra-to-osmo"
version = "0.1.0"
description = "Losslessly convert DJI Osmo 360 XTV containers to OSV"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.8,<7",
    "Send2Trash>=1.8,<3",
]

[project.scripts]
xtra-to-osmo = "xtra_to_osmo.cli:main"

[project.gui-scripts]
xtra-to-osmo-gui = "xtra_to_osmo.gui:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
